@@ -95,7 +95,7 @@ public class MongoDBDocumentManager implements DocumentManager {
         Objects.requireNonNull(entities, "entities is required");
         return StreamSupport.stream(entities.spliterator(), false)
                 .map(this::insert)
-                .collect(toList());
+                .toList();
     }
 
     @Override
@@ -104,7 +104,7 @@ public class MongoDBDocumentManager implements DocumentManager {
         Objects.requireNonNull(ttl, "ttl is required");
         return StreamSupport.stream(entities.spliterator(), false)
                 .map(e -> insert(e, ttl))
-                .collect(toList());
+                .toList();
     }
 
 
@@ -129,7 +129,7 @@ public class MongoDBDocumentManager implements DocumentManager {
         Objects.requireNonNull(entities, "entities is required");
         return StreamSupport.stream(entities.spliterator(), false)
                 .map(this::update)
-                .collect(toList());
+                .toList();
     }
 
 
